Add `ci.yml` for matrix builds on Java/OS
* Add test-specific `javaLauncher` configuration based
on the `testJavaVersion` project property propagated
from the mentioned `ci.yml`
* Upgrade `gradle.toolchains` to `1.0.0`
* Upgrade `Mockito` to `1.0.0`
* Fix Kotlin compile Gradle tasks to target Java `17`